[tool.poetry]
name = "cryptoarbiter-core"
version = "0.1.0"
description = ""
authors = ["ocbunknown"]
packages = [{ include = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.0"


alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
asyncpg = "0.29.0"
cffi = "1.16.0"
click = "8.1.7"
cryptography = "42.0.5"
fastapi = "0.114.0"
greenlet = "3.0.3"
gunicorn = "22.0.0"
h11 = "0.14.0"
idna = "3.7"
mako = "1.3.3"
markupsafe = "2.1.5"
orjson = "3.10.1"
packaging = "24.0"
pycparser = "2.22"
pydantic = "2.7.0"
pydantic-settings = "2.2.1"
pydantic-core = "2.18.1"
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
redis = "5.0.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.29"
starlette = "0.37.2"
typing-extensions = "4.11.0"
nest-asyncio = "^1.6.0"
websockets = "^12.0"
tronpy = "^0.5.0"
aiohttp = "^3.10.5"
uvicorn = "^0.30.6"
pycryptodome = "^3.20.0"
types-cffi = "1.16.0.20240331"
types-pyopenssl = "24.1.0.20240425"
types-redis = "4.6.0.20240425"
types-setuptools = "69.5.0.20240423"
certifi = "2024.8.30"
aiohttp-socks = "0.10.1"
web3 = "7.12.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
ruff = ">=0.11.2,<0.12"
testcontainers = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_ignores = false
follow_imports_for_stubs = true
pretty = true
show_absolute_path = true
hide_error_codes = false
show_error_context = true
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true

[tool.ruff]
lint.ignore = [
    "E501", "B008", "C901", "W191",
    "UP007", "UP006", "UP035", "UP045"
]
lint.select = ["E", "W", "F", "I", "C", "B", "UP"]
exclude = ["proto"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-p no:warnings", ""]
